UART/.metadata/.plugins/org.eclipse.cdt.ui/DMA_Tx_Rx.build.log
11:38:45 **** Incremental Build of configuration Debug for project DMA_Tx_Rx ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:117:30: error: incompatible type for argument 1 of 'HAL_UART_Receive'
  117 |             HAL_UART_Receive(huart2, msg, 20 ,1000);
      |                              ^~~~~~
      |                              |
      |                              UART_HandleTypeDef {aka struct __UART_HandleTypeDef}
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:746:56: note: expected 'UART_HandleTypeDef *' {aka 'struct __UART_HandleTypeDef *'} but argument is of type 'UART_HandleTypeDef' {aka 'struct __UART_HandleTypeDef'}
  746 | HAL_StatusTypeDef HAL_UART_Receive(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                    ~~~~~~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c:119:31: error: incompatible type for argument 1 of 'HAL_UART_Transmit'
  119 |             HAL_UART_Transmit(huart2, msg,20, 1000);
      |                               ^~~~~~
      |                               |
      |                               UART_HandleTypeDef {aka struct __UART_HandleTypeDef}
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:745:57: note: expected 'UART_HandleTypeDef *' {aka 'struct __UART_HandleTypeDef *'} but argument is of type 'UART_HandleTypeDef' {aka 'struct __UART_HandleTypeDef'}
  745 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                     ~~~~~~~~~~~~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

11:38:45 Build Failed. 3 errors, 0 warnings. (took 369ms)

